--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "ffwebsite",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@auth0/auth0-react": "^1.1.0",
     "@okta/oidc-middleware": "^1.0.2",
@@ -43,6 +44,5 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
